BE: add endpoint identifyPillsFromImages
